--- a/thenewhi/src/app/navbar/navbar.html
+++ b/thenewhi/src/app/navbar/navbar.html
@@ -95,58 +95,13 @@
 
 <mat-toolbar color="primary" class="main-nav">
   <div class="nav-left logo">
-    <a routerLink="/">
-      <span class="logo-text">HiTrace</span>
-    </a>
-  </div>
+  <a routerLink="/">
+    <img src="https://thehitrace.com/assets/landing/logo2-dc43e787babf3cfbe639ecaf28a6cc698b4a251221efb5ad2802cb357868360d.png" alt="HiTrace" class="logo-image">
+  </a>
+</div>
+
 
   <div class="nav-right large-screen-links">
-    <!-- <div class="dropdown-container">
-      <a mat-button routerLink="/products">Products & Solutions</a>
-      <div class="mega-menu products-menu">
-        <div class="menu-column">
-          <h4 class="menu-heading">HR & Operations</h4>
-          <a routerLink="/products/hr">Hi Trace HR</a>
-          <a routerLink="/products/recruit">Hi Trace Recruit</a>
-          <a routerLink="/products/pam">Hi Trace PAM</a>
-          <a routerLink="/products/l&d">Hi Trace L&D</a>
-          <a routerLink="/products/vms">Hi Trace VMS</a>
-          <a routerLink="/products/cms">Hi Trace CMS</a>
-          <a routerLink="/products/ticket">Hi Trace Ticket</a>
-        </div>
-        <div class="menu-column">
-          <h4 class="menu-heading">Finance & Compliance</h4>
-          <a routerLink="/products/tds">Hi Trace TDS</a>
-          <a routerLink="/products/project">Hi Trace Project</a>
-          <a routerLink="/products/crm">Hi Trace CRM</a>
-        </div>
-        <div class="menu-column">
-          <h4 class="menu-heading">Tech & Devices</h4>
-          <a routerLink="/products/iot">Hi Trace IoT</a>
-          <a routerLink="/products/devices">Hi Trace Devices</a>
-          <a routerLink="/products/asset">Hi Trace Asset</a>
-        </div>
-      </div>
-    </div>
-    
-    <div class="dropdown-container">
-      <a mat-button routerLink="/services">Services</a>
-      <div class="mega-menu services-menu">
-        <div class="menu-column">
-          <h4 class="menu-heading">Consulting & Integration</h4>
-          <a href="#">Deep Domain Expertise</a>
-          <a href="#">IoT Integration & Solutions</a>
-          <a href="#">Project Management</a>
-        </div>
-        <div class="menu-column">
-          <h4 class="menu-heading">Implementation & Support</h4>
-          <a href="#">End-to-End Implementation</a>
-          <a href="#">Training & Development</a>
-          <a href="#">Dedicated Support</a>
-        </div>
-      </div>
-    </div> -->
-    
     <a mat-button routerLink="/products">Products & Solutions</a>
     <a mat-button routerLink="/services">Services</a>
     <a mat-button routerLink="/about">About Us</a>
