--- a/thenewhi/src/app/products/products.html
+++ b/thenewhi/src/app/products/products.html
@@ -69,9 +69,33 @@
         <h3 class="card-title">Hi Trace IoT</h3>
         <p class="card-description">IoT development and integration, development of integrated dashboards to monitor all loTs.</p>
       </div>
-      <div class="product-card" (click)="openProductDetails('devices')">
+      <!-- <div class="product-card" (click)="openProductDetails('devices')">
         <h3 class="card-title">Hi Trace Devices</h3>
         <p class="card-description">All devices to enable data capture and data collection is available from Hi Trace.</p>
+      </div> -->
+      <div class="product-card" (click)="openProductDetails('csFrTrace')">
+        <h3 class="card-title">TIME ATTENDANCE  - FACE RECOGNITION</h3>
+        <p class="card-description">Visible light facial recognition device with anti-spoofing technology and a 2.8" touch screen.</p>
+      </div>
+      <div class="product-card" (click)="openProductDetails('csFrt103Vl')">
+        <h3 class="card-title">FACE RECOGNITION</h3>
+        <p class="card-description">Touchless multi-biometric identification terminal with visible light facial recognition from a distance.</p>
+      </div>
+      <div class="product-card" (click)="openProductDetails('csFpt301W')">
+        <h3 class="card-title">BIOMETRIC DOOR ACCESS</h3>
+        <p class="card-description">Ultra-thin fingerprint time attendance and access control terminal with a BioID sensor and Wi-Fi.</p>
+      </div>
+      <div class="product-card" (click)="openProductDetails('csFpt101')">
+        <h3 class="card-title">TIME ATTENDANCE - FINGERPRINT </h3>
+        <p class="card-description">A compact fingerprint time attendance device with a 2.8" TFT screen and up to 1000 fingerprint capacity.</p>
+      </div>
+      <div class="product-card" (click)="openProductDetails('csFrt302')">
+        <h3 class="card-title">TIME ATTENDANCE - CS-FRT302</h3>
+        <p class="card-description">A device with advanced face and fingerprint recognition, a large capacity, and optional battery backup.</p>
+      </div>
+      <div class="product-card" (click)="openProductDetails('csFrtSft5Series')">
+        <h3 class="card-title">FACE RECOGNITION - CS-FRT SFT 5SERIES</h3>
+        <p class="card-description">A versatile device with visible light facial recognition, anti-spoofing, and multiple verification methods.</p>
       </div>
     </div>
   </div>
